Add and configure Minio upload, download.
